--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -1,30 +1,60 @@
-{% extends "base.html" %}
-
-{% block title %}Sign Up{% endblock %}
-
-{% block content %}
-<script defer src="{{ url_for('static', filename='passwordCheck.js') }}"></script>
+{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
+content %}
+<script
+    defer
+    src="{{ url_for('static', filename='passwordCheck.js') }}"
+></script>
 <h2>Create Account</h2>
 <form action="/signup" method="post">
-  <div class="container">
-    <h1>Sign Up</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
+    <div class="container">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr />
 
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+        <label for="fname"><b>Full name</b></label>
+        <input
+            type="text"
+            placeholder="Enter Full Name"
+            name="fname"
+            required
+        />
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="email" required />
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+        <!--In what format will the data in the date column will be sent to the server and how do I handle it in python flask?-->
+        <label for="dob"><b>Date of birth</b></label>
+        <input
+            type="date"
+            placeholder="Enter Date of brith"
+            name="dob"
+            required
+        />
 
-    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+        <label for="psw"><b>Password</b></label>
+        <input
+            type="password"
+            placeholder="Enter Password"
+            name="psw"
+            required
+        />
 
-    <div class="clearfix">
-      <button type="submit" class="signupbtn">Sign Up</button>
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <input
+            type="password"
+            placeholder="Repeat Password"
+            name="psw-repeat"
+            required
+        />
+
+        <p>
+            By creating an account you agree to our
+            <a href="#" style="color: dodgerblue">Terms & Privacy</a>.
+        </p>
+
+        <div class="clearfix">
+            <button type="submit" class="signupbtn">Sign Up</button>
+        </div>
     </div>
-  </div>
-</form> 
+</form>
 {% endblock %}
