--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
-{% extends "base.html" %}
-
-{% block title %}Home{% endblock %}
-
-{% block content %}
-    <p>Welcome to the homepage!</p>
-{% endblock %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+%}
+<p>Welcome to the homepage!</p>
+{% if current_user.is_authenticated %}
+<p>You are logged in</p>
+{%endif%} {% endblock %}
